--- a/facilities.ini
+++ b/facilities.ini
@@ -1,9 +1,9 @@
 [config]
-FAC_HIGH_OUTPUT_POWER_PLANT_GUINAME = High Output Power Plant
-FAC_MARKETING_DEPT_GUINAME = Marketing Dept
-FAC_POWER_PLANT_GUINAME = Power Plant
-FAC_QA_OFFICE_GUINAME = QA Office
-FAC_RESEARCH_CENTER_GUINAME = Research Center
-FAC_RESEARCH_OFFICE_GUINAME = Research Office
-FAC_SUPPLY_STOCKPILE_GUINAME = Supply Stockpile
+FAC_HIGH_OUTPUT_POWER_PLANT_GUINAME = Grosses Kraftwerk
+FAC_MARKETING_DEPT_GUINAME = Marketing Abteilung
+FAC_POWER_PLANT_GUINAME = Kraftwerk
+FAC_QA_OFFICE_GUINAME = QA Buero
+FAC_RESEARCH_CENTER_GUINAME = Forschungszentrum
+FAC_RESEARCH_OFFICE_GUINAME = Forschungs Buero
+FAC_SUPPLY_STOCKPILE_GUINAME = Nachschublager
 
