--- a/facilities.ini
+++ b/facilities.ini
@@ -2,8 +2,8 @@
 FAC_HIGH_OUTPUT_POWER_PLANT_GUINAME = Grosses Kraftwerk
 FAC_MARKETING_DEPT_GUINAME = Marketing Abteilung
 FAC_POWER_PLANT_GUINAME = Kraftwerk
-FAC_QA_OFFICE_GUINAME = QA Buero
+FAC_QA_OFFICE_GUINAME = Buero der Qualitätssicherung
 FAC_RESEARCH_CENTER_GUINAME = Forschungszentrum
 FAC_RESEARCH_OFFICE_GUINAME = Forschungs Buero
-FAC_SUPPLY_STOCKPILE_GUINAME = Nachschublager
+FAC_SUPPLY_STOCKPILE_GUINAME = Versorgungslager
 
