--- a/features.ini
+++ b/features.ini
@@ -1,47 +1,47 @@
 [config]
-FEATURE_BASIC_CAR_GUINAME = Basic Car
-FEATURE_BASIC_QA_GUINAME = QA
-FEATURE_ANTILOCK_BRAKES_GUINAME = Anti-Lock Brakes
-FEATURE_REVERSING_CAMERA_GUINAME = Reversing Camera
-FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Tire Pressure Sensors
-FEATURE_DRIVER_AIRBAG_GUINAME = Driver Airbag
-FEATURE_PASSENGER_AIRBAG_GUINAME = Passenger Airbag
-FEATURE_SPARE_WHEEL_GUINAME = Spare Wheel
-FEATURE_LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Lane Departure Warning
-FEATURE_POWER_STEERING_GUINAME = Power Steering
-FEATURE_AUTOSTEER_HEADLIGHTS_GUINAME = Autosteer Headlights
-FEATURE_CRUISE_CONTROL_GUINAME = Cruise Control
-FEATURE_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adapative Cruise Control
-FEATURE_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Traffic-Aware Cruise Control
-FEATURE_CENTRAL_LOCKING_GUINAME = Central Locking
-FEATURE_CAR_ALARM_GUINAME = Car Alarm
-FEATURE_KEYLESS_ENTRY_GUINAME = Keyless Entry
-FEATURE_AIRCON_GUINAME = Air Conditioning
-FEATURE_CLIMATE_CONTROL_GUINAME = Climate Control
+FEATURE_BASIC_CAR_GUINAME = Einfaches Auto
+FEATURE_BASIC_QA_GUINAME = Qualitäts Kontrolle
+FEATURE_ANTILOCK_BRAKES_GUINAME = Anti Blockier System
+FEATURE_REVERSING_CAMERA_GUINAME = Rückfahr Kamera
+FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
+FEATURE_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
+FEATURE_PASSENGER_AIRBAG_GUINAME = Beifahre Airbag
+FEATURE_SPARE_WHEEL_GUINAME = Ersatzrad
+FEATURE_LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurehalte Assistent
+FEATURE_POWER_STEERING_GUINAME = Servo Lenkung
+FEATURE_AUTOSTEER_HEADLIGHTS_GUINAME = Bewegliche Frontscheinwerfer
+FEATURE_CRUISE_CONTROL_GUINAME = Tempomat
+FEATURE_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adapativer Tempomat
+FEATURE_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Voll Automatischer Tempomat
+FEATURE_CENTRAL_LOCKING_GUINAME = Zentralverigelung
+FEATURE_CAR_ALARM_GUINAME = Alarmanlage
+FEATURE_KEYLESS_ENTRY_GUINAME = Schluesselloses Zugangssystem 
+FEATURE_AIRCON_GUINAME = Klima Anlage
+FEATURE_CLIMATE_CONTROL_GUINAME = Klima Kontrole
 FEATURE_POLLEN_FILTER_GUINAME = Pollen Filter
-FEATURE_HEATER_GUINAME = Heater
-FEATURE_HEATED_SEATS_GUINAME = Heated Seats
-FEATURE_LEATHER_INTERIOR_GUINAME = Leather Interior
-FEATURE_SUN_ROOF_GUINAME = Sun Roof
-FEATURE_PANORAMIC_SUNROOF_GUINAME = Panoramic Sun Roof
-FEATURE_ELECTRIC_WINDOWS_GUINAME = Electric Windows
-FEATURE_SATNAV_GUINAME = Sat Nav
-FEATURE_AUTO_WIPERS_GUINAME = Automatic Windscreen Wipers
-FEATURE_AUTO_HEADLIGHTS_GUINAME = Automatic Headlights
-FEATURE_POWERED_SEATS_GUINAME = Powered Seats
-FEATURE_POWERED_STEER_ADJUSTMENT_GUINAME = Powered Steering Adjustment
-FEATURE_POWERED_TAILGATE_GUINAME = Powered Tailgate
-FEATURE_IN_CAR_MUSIC_GUINAME = In-Car Music
-FEATURE_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Phone Support
-FEATURE_VOICE_RECOGNITION_GUINAME = Voice Recognition
-FEATURE_ALUMINIUM_BODY_GUINAME = Aluminium Body
+FEATURE_HEATER_GUINAME = Heizung
+FEATURE_HEATED_SEATS_GUINAME = Beheitzte Sitze
+FEATURE_LEATHER_INTERIOR_GUINAME = Leder Innenausstattung
+FEATURE_SUN_ROOF_GUINAME = Einfaches Schiebe Dach
+FEATURE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
+FEATURE_ELECTRIC_WINDOWS_GUINAME = Elektronische Fenster
+FEATURE_SATNAV_GUINAME = GPS Navigationssystem
+FEATURE_AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
+FEATURE_AUTO_HEADLIGHTS_GUINAME = Automatische Frontscheinwerfer
+FEATURE_POWERED_SEATS_GUINAME = Elektrische Sitze
+FEATURE_POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
+FEATURE_POWERED_TAILGATE_GUINAME = Automatische Heckklappe
+FEATURE_IN_CAR_MUSIC_GUINAME = Boardentertainment
+FEATURE_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Support
+FEATURE_VOICE_RECOGNITION_GUINAME = Spracherkennung
+FEATURE_ALUMINIUM_BODY_GUINAME = Aluminium Hülle
 FEATURE_SPOILER_GUINAME = Spoiler
-FEATURE_STOP_START_ENGINE_GUINAME = Stop-Start Engine
-FEATURE_EMERGENCY_BRAKE_ASSIST_GUINAME = Emergency Brake Assist
-FEATURE_DIRECTIONAL_HEADLIGHTS_GUINAME = Directional Headlights
-FEATURE_XENON_HEADLIGHTS_GUINAME = Xenon headlights
-FEATURE_LED_HEADLIGHTS_GUINAME = LED Headlights
-FEATURE_ALLOY_WHEELS_GUINAME = Alloy Wheels
-FEATURE_POLISH_GUINAME = Polished Paintwork
-FEATURE_TOUCHSCREEN_GUINAME = Touchscreen Interface
+FEATURE_STOP_START_ENGINE_GUINAME = Start-Stop Automatik
+FEATURE_EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsassistent
+FEATURE_DIRECTIONAL_HEADLIGHTS_GUINAME = Ausgerichtete Frontscheinwerfer
+FEATURE_XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
+FEATURE_LED_HEADLIGHTS_GUINAME = LED Frontscheinwerfer
+FEATURE_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
+FEATURE_POLISH_GUINAME = Pollierte Lackierung
+FEATURE_TOUCHSCREEN_GUINAME = Touchscreen Bildschrim
 
