--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -1,101 +1,101 @@
 [config]
-TASK_MAKE_VALVE_GUINAME = Make Valve
-TASK_FIT_FRONTBUMPER_GUINAME = Fit Front Bumper
-TASK_MAKE_WINDOWS_GUINAME = Make Window
-TASK_MAKE_WHEELS_GUINAME = Make Wheel
-TASK_FIT_REARARCH_GUINAME = Fit Rear Arch
-TASK_MAKE_TIRES_GUINAME = Make Tire
-TASK_FIT_REARBUMPER_GUINAME = Fit Rear Bumper
-TASK_MAKE_DOORPANELS_GUINAME = Make Door Panel
-TASK_MAKE_BRAKES_GUINAME = Make Brake
-TASK_MAKE_STEERINGWHEELS_GUINAME = Make Steering Wheel
-TASK_MAKE_STARTERMOTOR_GUINAME = Make Engine Control Unit
-TASK_MAKE_SPOILER_GUINAME = Make Spoiler
-TASK_MAKE_BOOT_GUINAME = Make Trunk
-TASK_MAKE_BONNET_GUINAME = Make Hood
-TASK_MAKE_ROLLCAGE_GUINAME = Make Body Shell
-TASK_MAKE_ENGINE_BLOCK_GUINAME = Make Engine Block
-TASK_MAKE_ENGINE_ASSEMBLY_GUINAME = Make Engine Assembly
-TASK_MAKE_DRIVE_SHAFT_GUINAME = Make Drive Shaft
-TASK_FIT_FRONTARCH_GUINAME = Fit Front Arch
-TASK_FIT_BOOT_GUINAME = Fit Trunk
-TASK_FIT_STEERING_COLUMN_GUINAME = Fit Steering Column
-TASK_FIT_STEERING_WHEEL_GUINAME = Fit Steering Wheel
-TASK_FIT_TIRES_GUINAME = Fit Tires
-TASK_FIT_WHEELS_GUINAME = Fit Wheels
-TASK_FIT_WINDOWS_GUINAME = Fit Windows
-TASK_FIT_WING MIRRORS_GUINAME = Fit Wing Mirrors
-TASK_MAKE_AXLES_GUINAME = Make Axle
-TASK_MAKE_EXHAUST_GUINAME = Make Exhaust
-TASK_MAKE_FUELTANKS_GUINAME = Make Fuel Tank
-TASK_MAKE_HORNS_GUINAME = Make Horn
-TASK_MAKE_LIGHTS_GUINAME = Make Light
-TASK_MAKE_AIRCON_GUINAME = Make Aircon
-TASK_MAKE_PANORAMIC_SUNROOF_GUINAME = Make Panoramic Sunroof
-TASK_MAKE_POWERTRAIN_GUINAME = Make Powertrain
-TASK_MAKE_RADIATOR_GUINAME = Make Radiator
-TASK_MAKE_ROOF_GUINAME = Make Roof
-TASK_MAKE_SEATS_GUINAME = Make Seat
-TASK_MAKE_WINDSCREEN_GUINAME = Make Windscreen
-TASK_FIT_ARCHES_GUINAME = Fit Arches
-TASK_FIT_BONNET_GUINAME = Fit Hood
-TASK_FIT_BOTTOMTRIM_GUINAME = Fit Bottom Trim
-TASK_FIT_BRAKES_GUINAME = Fit Brakes
-TASK_FIT_BUMPERS_GUINAME = Fit Bumpers
-TASK_FIT_DOOR_PANELS_GUINAME = Fit Door panels
-TASK_FIT_DRIVE_SHAFT_GUINAME = Fit Drive Shaft
-TASK_FIT_FRONTVENT_GUINAME = Fit Vent
-TASK_FIT_FRONT_AXLE_GUINAME = Fit Front Axle
-TASK_FIT_REAR_AXLE_GUINAME = Fit Rear Axle
-TASK_FIT_ROLLCAGE_GUINAME = Fit Body Shell
-TASK_MAKE_SUNROOF_GUINAME = Make Sunroof
-TASK_DRY FINISH_GUINAME = Dry Finish
-TASK_FIT_STEERING_ASSEMBLY_GUINAME = Fit Steering Assembly
-TASK_FIT_BODYFRAME_GUINAME = Fit Bodyframe
-TASK_STEEL_SHEETS_GUINAME = Make Steel Sheets
-TASK_FIT_DASHBOARD_GUINAME = Fit Dashboard
-TASK_FIT_DOORS_GUINAME = Fit Doors
-TASK_FIT_ROOF_GUINAME = Fit Roof
-TASK_MAKE_SERVOS_GUINAME = Make Servos
-TASK_MAKE_SENSORS_GUINAME = Make Sensors
-TASK_FIT_HORN_GUINAME = Fit Horn
-TASK_FIT_LIGHTS_GUINAME = Fit Lights
-TASK_FIT_RADIATOR_GUINAME = Fit Radiator
-TASK_FIT_WHEELASSEMBLY_GUINAME = Fit Wheel Assembly
-TASK_DRY_UNDERCOAT_GUINAME = Dry Undercoat
-TASK_FIT_SEATS_GUINAME = Fit Seats
-TASK_FIT_WINDSCREEN_GUINAME = Fit Windscreen
-TASK_FIT_AIRCON_GUINAME = Fit Aircon
-TASK_FIT_EXHAUST_GUINAME = Fit Exhaust
-TASK_FIT_ENGINE_ASSEMBLY_GUINAME = Fit Power Train
-TASK_FIT_UNDERCARRIAGE_GUINAME = Fit Undercarriage
-TASK_FIT AXLES_GUINAME = Fit Axles
-TASK_FUEL_TANK_GUINAME = Fit Fuel Tank
-TASK_PAINT_FINISH_GUINAME = Paint Finish
-TASK_PAINT_UNDERCOAT_GUINAME = Paint Undercoat
-TASK_POLISH_PAINTWORK_GUINAME = Polish Paintwork
-TASK_FIT_ELECTRONICS_GUINAME = Fit Electronics
-TASK_FIT CHASSIS_GUINAME = Chassis Assemble
-CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Advanced Manufacturing
-TASK_FIT_BODY_GUINAME = Fit Body
-TASK_CONVEYOR_GUINAME = Conveyor
+TASK_MAKE_VALVE_GUINAME = Ventil Herstellung
+TASK_FIT_FRONTBUMPER_GUINAME = Vordere Stosstangen Montage
+TASK_MAKE_WINDOWS_GUINAME = Fenster Herstellung
+TASK_MAKE_WHEELS_GUINAME = Felgen Herstellung
+TASK_FIT_REARARCH_GUINAME = Hinterer Kotflügel Montage
+TASK_MAKE_TIRES_GUINAME = Reifen Herstellung
+TASK_FIT_REARBUMPER_GUINAME = Hintere Stossstangen Montage
+TASK_MAKE_DOORPANELS_GUINAME = Herstellung Von Tür Verkleidung
+TASK_MAKE_BRAKES_GUINAME = Bremsen Herstellung
+TASK_MAKE_STEERINGWHEELS_GUINAME = Lenkrad Herstellung
+TASK_MAKE_STARTERMOTOR_GUINAME = Motorsteuerung Herstellung
+TASK_MAKE_SPOILER_GUINAME = Spoiler Herstellung
+TASK_MAKE_BOOT_GUINAME = Kofferaum Herstellung
+TASK_MAKE_BONNET_GUINAME = Motorhauben Herstellung
+TASK_MAKE_ROLLCAGE_GUINAME = Karosserie Herstellung 
+TASK_MAKE_ENGINE_BLOCK_GUINAME = Motorblock Herstellung
+TASK_MAKE_ENGINE_ASSEMBLY_GUINAME = Finale Motor Montage
+TASK_MAKE_DRIVE_SHAFT_GUINAME = Antribswelle Herstellung
+TASK_FIT_FRONTARCH_GUINAME = Voderer Kotflügel Montage
+TASK_FIT_BOOT_GUINAME = Kofferaum Montage
+TASK_FIT_STEERING_COLUMN_GUINAME = Lenksauelen Montage
+TASK_FIT_STEERING_WHEEL_GUINAME = Lenkrad Montage
+TASK_FIT_TIRES_GUINAME = Reifen Montage
+TASK_FIT_WHEELS_GUINAME = Felgen Montage
+TASK_FIT_WINDOWS_GUINAME = Fenster Montage
+TASK_FIT_WING_MIRRORS_GUINAME = Seitenspiegel Montage
+TASK_MAKE_AXLES_GUINAME = Achsen Herstellung
+TASK_MAKE_EXHAUST_GUINAME = Auspuff Herstellung
+TASK_MAKE_FUELTANKS_GUINAME = Benzintank Herstellung
+TASK_MAKE_HORNS_GUINAME = Hupen Herstellung
+TASK_MAKE_LIGHTS_GUINAME = Scheinwerfer herstellung
+TASK_MAKE_AIRCON_GUINAME = Druckluft Hupen Herstellung
+TASK_MAKE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach Herstellung
+TASK_MAKE_POWERTRAIN_GUINAME = Antrieb Herstellung
+TASK_MAKE_RADIATOR_GUINAME = Kühler Herstellung
+TASK_MAKE_ROOF_GUINAME = Dach Herstellung
+TASK_MAKE_SEATS_GUINAME = Sitz Herstellung
+TASK_MAKE_WINDSCREEN_GUINAME = Frontscheiben Herstellung
+TASK_FIT_ARCHES_GUINAME = Finale Kotflügel Montage
+TASK_FIT_BONNET_GUINAME = Motorhauben Montage
+TASK_FIT_BOTTOMTRIM_GUINAME = Zierleisten Montage
+TASK_FIT_BRAKES_GUINAME = Bremsen Montage
+TASK_FIT_BUMPERS_GUINAME = Stosstangen Montage
+TASK_FIT_DOOR_PANELS_GUINAME = Montage der Tuerverkleidung
+TASK_FIT_DRIVE_SHAFT_GUINAME = Antriebswellen Montage 
+TASK_FIT_FRONTVENT_GUINAME = Ventilations Montage
+TASK_FIT_FRONT_AXLE_GUINAME = Vorderachsen Montage
+TASK_FIT_REAR_AXLE_GUINAME = Hinterachsen Montage
+TASK_FIT_ROLLCAGE_GUINAME = Überollkaefig Montage
+TASK_MAKE_SUNROOF_GUINAME = Schiebedach Herstekllung
+TASK__FINISH_GUINAME = Finale Untergrund Lackierung
+TASK_FIT_STEERING_ASSEMBLY_GUINAME = Lenkstangen Montage
+TASK_FIT_BODYFRAME_GUINAME = Karosserie Montage
+TASK_STEEL_SHEETS_GUINAME = Stahlblech Herstellung
+TASK_FIT_DASHBOARD_GUINAME = Amaturenbrett Montage
+TASK_FIT_DOORS_GUINAME = Tuer Montage
+TASK_FIT_ROOF_GUINAME = Dach Montage
+TASK_MAKE_SERVOS_GUINAME = Servos Herstellung
+TASK_MAKE_SENSORS_GUINAME = Sensor Herstellung
+TASK_FIT_HORN_GUINAME = Hupen Montage
+TASK_FIT_LIGHTS_GUINAME = Scheinwerfer Montage
+TASK_FIT_RADIATOR_GUINAME = Kühler Montage
+TASK_FIT_WHEELASSEMBLY_GUINAME = Felgen 
+TASK_DRY_UNDERCOAT_GUINAME = Grundierung
+TASK_FIT_SEATS_GUINAME = Sitz Montage
+TASK_FIT_WINDSCREEN_GUINAME = Frontscheiben Montage
+TASK_FIT_AIRCON_GUINAME = Klimaanlagen Montage
+TASK_FIT_EXHAUST_GUINAME = Auspuff Montage
+TASK_FIT_ENGINE_ASSEMBLY_GUINAME = Antriebswellen Montage
+TASK_FIT_UNDERCARRIAGE_GUINAME = Fahrgestell Montage
+TASK_FIT_AXLES_GUINAME = Achsen Montage
+TASK_FUEL_TANK_GUINAME = Benzintank Montage
+TASK_PAINT_FINISH_GUINAME = Finale Lackierung
+TASK_PAINT_UNDERCOAT_GUINAME = Farb Grundierung
+TASK_POLISH_PAINTWORK_GUINAME = Polierte lackierung
+TASK_FIT_ELECTRONICS_GUINAME = Montage Der Elektronik
+TASK_FIT_CHASSIS_GUINAME = Fahrgestell Montage 
+CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Fortgeschrittene Montage
+TASK_FIT_BODY_GUINAME = Karosserie Montage
+TASK_CONVEYOR_GUINAME = Förderband
 TASK_EXPORT_GUINAME = Export
-TASK_PAINT_GUINAME = Paint
-TASK_FIT_ACCESSORIES_GUINAME = Fit Accessories
-TASK_FIT_ENGINE_GUINAME = Fit Engine
-CATEGORY_FACILITIES_GUINAME = Facilities
-TASK_QA_GUINAME = Quality Check
-TASK_RESOURCE_CONVEYOR_GUINAME = Resource Conveyor
-TASK_RESOURCE_IMPORTER_GUINAME = Resource Importer
-TASK_CONVEYOR_CONVERGE3_GUINAME = Conveyor Converge 3
-TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Conveyor T-Join Right
-TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Conveyor T-Join Left
-TASK_CONVEYOR_T_JOIN_GUINAME = Conveyor T-Join
-TASK_CONVEYOR_T_GUINAME = Conveyor T-Junction
-TASK_CONVEYOR_RIGHT_GUINAME = Conveyor Right
-TASK_CONVEYOR_LEFT_GUINAME = Conveyor Left
-TASK_CONVEYOR_CROSSOVER_GUINAME = Conveyor crossover
-TASK_CONVEYOR_T_RIGHT_GUINAME = Conveyor T-Junction Right
-TASK_CONVEYOR_SPLIT3_GUINAME = Conveyor Split 3
-TASK_CONVEYOR_T_LEFT_GUINAME = Conveyor T-Junction Left
+TASK_PAINT_GUINAME = Farbe
+TASK_FIT_ACCESSORIES_GUINAME = Zubehoer Montage
+TASK_FIT_ENGINE_GUINAME = Motor Montage
+CATEGORY_FACILITIES_GUINAME = Anllagen
+TASK_QA_GUINAME = Qualitaetssicherung
+TASK_RESOURCE_CONVEYOR_GUINAME = Produktionsmittel Foerderband
+TASK_RESOURCE_IMPORTER_GUINAME = Produktionsmittel Importierer
+TASK_CONVEYOR_CONVERGE3_GUINAME = Forderband Sammelpunkt 3
+TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Forderband T-stueck Rechts
+TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Forderband T-stueck Links
+TASK_CONVEYOR_T_JOIN_GUINAME = Forderband T-stueck
+TASK_CONVEYOR_T_GUINAME = Forderband Kreuzung
+TASK_CONVEYOR_RIGHT_GUINAME = Forderband Rechts
+TASK_CONVEYOR_LEFT_GUINAME = Forderband T-stueck Links
+TASK_CONVEYOR_CROSSOVER_GUINAME = Forderband Uebergang
+TASK_CONVEYOR_T_RIGHT_GUINAME = Forderband Kreutzung Rechts
+TASK_CONVEYOR_SPLIT3_GUINAME = Forderband Teilung 3
+TASK_CONVEYOR_T_LEFT_GUINAME = Forderband Kreutzung Links
 
