--- a/sales_categories.ini
+++ b/sales_categories.ini
@@ -1,5 +1,5 @@
 [config]
-NAME_CHEAP = "Budget"
-NAME_MID = "Mid-Range"
-NAME_EXPENSIVE = "Expensive"
-NAME_LUXURY = "Luxury"
+NAME_CHEAP = "Kompaktklasse"
+NAME_MID = "Mittelklasse"
+NAME_EXPENSIVE = "Oberklasse"
+NAME_LUXURY = "Luxusklasse"
