--- a/facilities.ini
+++ b/facilities.ini
@@ -2,7 +2,7 @@
 FAC_HIGH_OUTPUT_POWER_PLANT_GUINAME = Grosses Kraftwerk
 FAC_MARKETING_DEPT_GUINAME = Marketing Abteilung
 FAC_POWER_PLANT_GUINAME = Kraftwerk
-FAC_QA_OFFICE_GUINAME = Buero der Qualitätssicherung
+FAC_QA_OFFICE_GUINAME = Buero der Qualitaetssicherung
 FAC_RESEARCH_CENTER_GUINAME = Forschungszentrum
 FAC_RESEARCH_OFFICE_GUINAME = Forschungs Buero
 FAC_SUPPLY_STOCKPILE_GUINAME = Versorgungslager
