--- a/(Partial_done)strings.ini
+++ b/(Partial_done)strings.ini
@@ -10,7 +10,7 @@ SALES_CATEGORY			= "Price Category:"
 MESS_122_TITLE			= "Version 1.23 Wichtige Anderungen"
 MESS_122			= "Bitte beachten Sie, Seit Version 1.22 hat sich die Reihenfolge wie die Felgen Reifen und Bremsen montiert werden geaendert! Sie muessen Ihre vorhandenen productions linien dahingeghenmd anapssen"
 
-TECHTT_REQUIREMENT		= "Benoetig:"
+TECHTT_REQUIREMENT		= "Benoetigt:"
 TECHTT_PRODSLOT			= "Schaltet diese slot Frei:"
 TECHTT_FACILITY			= "Schaltetdiese Anlage Frei:"
 TECHTT_UPGRADE			= "Schaltet dieses Slot Upgrade Frei:"
