--- a/(Partial_done)strings.ini
+++ b/(Partial_done)strings.ini
@@ -11,8 +11,8 @@ MESS_122_TITLE			= "Version 1.23 Wichtige Anderungen"
 MESS_122			= "Bitte beachten Sie, Seit Version 1.22 hat sich die Reihenfolge wie die Felgen Reifen und Bremsen montiert werden geaendert! Sie muessen Ihre vorhandenen productions linien dahingeghenmd anapssen"
 
 TECHTT_REQUIREMENT		= "Benoetigt:"
-TECHTT_PRODSLOT			= "Schaltet diese slot Frei:"
-TECHTT_FACILITY			= "Schaltetdiese Anlage Frei:"
+TECHTT_PRODSLOT			= "Schaltet diesen slot Frei:"
+TECHTT_FACILITY			= "Schaltet diesen Anlage Frei:"
 TECHTT_UPGRADE			= "Schaltet dieses Slot Upgrade Frei:"
 
 MESSAGE_OK			= "OK"
