--- a/upgrades.ini
+++ b/upgrades.ini
@@ -1,55 +1,55 @@
 [config]
-ADAPTIVE_CRUISE_CONTROL_GUINAME = Adaptive Cruise Control
-ALLOY_WHEELS_GUINAME = Alloy Wheels
-ALUMINIUM_BODY_GUINAME = Aluminium Body
-ANTILOCKBRAKES_GUINAME = Anti-lock Brakes
-AUTOSTEER_HEADLIGHTS_GUINAME = Autosteer headlights
-AUTO_HEADLIGHTS_GUINAME = Automatic Headlights
-AUTO_WIPERS_GUINAME = Automatic Wipers
-BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Phone Support
-CAR_ALARM_GUINAME = Car Alarm
-CENTRAL_LOCKING_GUINAME = Central Locking
-CLIMATECONTROL_GUINAME = ClimateControl
-COMPUTERIZED_SALES_GUINAME = Computerized Sales
-CRUISE_CONTROL_GUINAME = Cruise Control
-DIRECTIONAL_HEADLIGHTS_GUINAME = Directional Headlights
-DRIVER_AIRBAG_GUINAME = Driver Airbag
-ELECTRIC_WINDOWS_GUINAME = Electric Windows
-EMERGENCY_BRAKE_ASSIST_GUINAME = Emergency Brake Assist
-EXPEDITED_SALES_GUINAME = Expedited Sales
-EXTRAROBOTS1_GUINAME = Extra Robots I
-EXTRAROBOTS2_GUINAME = Extra Robots II
-EXTRAROBOTS3_GUINAME = Extra Robots III
-FASTER_DRYING_GUINAME = Faster Drying
-FASTER_DRYING2_GUINAME = Turbo Drying
-FASTER_DRYING3_GUINAME = Max Power Drying
-HEATED_SEATS_GUINAME = Heated Seats
-HEATER_GUINAME = Heater
-IN_CAR_MUSIC_GUINAME = In-Car Music
-KEYLESS_ENTRY_GUINAME = Keyless Entry
-LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Lane-Departure warning system
-LEATHER_INTERIOR_GUINAME = Leather Interior
-LED_HEADLIGHTS_GUINAME = LED Headlights
-MAKE_ALLOY_WHEELS_GUINAME = Make Alloy Wheels
-PAINTNOZZLES1_GUINAME = High pressure paint nozzles
-PANORAMIC_SUNROOF_GUINAME = Panoramic Sun Roof
-PASSENGER_AIRBAG_GUINAME = Passenger Airbag
+ADAPTIVE_CRUISE_CONTROL_GUINAME = Tempomat
+ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
+ALUMINIUM_BODY_GUINAME = Aluminium Karosserie
+ANTILOCKBRAKES_GUINAME = Anti Blockier Bremsen 
+AUTOSTEER_HEADLIGHTS_GUINAME = Elektrische Frontscheinwerfer
+AUTO_HEADLIGHTS_GUINAME = Automatische Frontscheinwerfer
+AUTO_WIPERS_GUINAME = Automatische Scheibenwischer
+BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Support
+CAR_ALARM_GUINAME = Alarmanlage
+CENTRAL_LOCKING_GUINAME = Zentralveriegelung
+CLIMATECONTROL_GUINAME = Klima Kontrolle
+COMPUTERIZED_SALES_GUINAME = Computergestuetzter Verkauf
+CRUISE_CONTROL_GUINAME = Tempomat
+DIRECTIONAL_HEADLIGHTS_GUINAME = Ausgerichtete Frontscheinwerfer
+DRIVER_AIRBAG_GUINAME = Fahrer Airbag
+ELECTRIC_WINDOWS_GUINAME = Elektrische Fensterheber 
+EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsasisstenr
+EXPEDITED_SALES_GUINAME = Beschleunigter Verkauf
+EXTRAROBOTS1_GUINAME = Extra Roboter I
+EXTRAROBOTS2_GUINAME = Extra Roboter II
+EXTRAROBOTS3_GUINAME = Extra Roboter III
+FASTER_DRYING_GUINAME = Schnellere Trockung
+FASTER_DRYING2_GUINAME = Turbo Trockung
+FASTER_DRYING3_GUINAME = Ultra schnelle Trocknung
+HEATED_SEATS_GUINAME = Sitzheitzung
+HEATER_GUINAME = Heitzung
+IN_CAR_MUSIC_GUINAME = Entertainment System
+KEYLESS_ENTRY_GUINAME = Schluesselloses zugangssystem
+LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurhalteassistent
+LEATHER_INTERIOR_GUINAME = Leder Innenausstattung
+LED_HEADLIGHTS_GUINAME = LED frontscheinwerfer
+MAKE_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen Herstellung
+PAINTNOZZLES1_GUINAME = Hochdruck Farb Duesen
+PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
+PASSENGER_AIRBAG_GUINAME = Beifahrer Airbag
 POLLEN_FILTER_GUINAME = Pollen Filter
-POWERED_SEATS_GUINAME = Powered Seats
-POWERED_STEER_ADJUSTMENT_GUINAME = Powered Steering Wheel Adjustment
-POWERED_TAILGATE_GUINAME = Powered Tailgate
-POWERPLANT_EFFICIENCY_GUINAME = Powerplant Efficiency
-POWERSTEERING_GUINAME = Power-Steering
-PREDICTIVE_STOCK_CONTROL_GUINAME = Predictive Stock Control
-REVERSING_CAMERA_GUINAME = Reversing Camera
-SATNAV_GUINAME = Sat Nav
-SPARE_WHEEL_GUINAME = Spare Wheel
+POWERED_SEATS_GUINAME = Elektrische Sitze
+POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
+POWERED_TAILGATE_GUINAME = Automatische Heckklappe
+POWERPLANT_EFFICIENCY_GUINAME = Effizientes Kraftwerk
+POWERSTEERING_GUINAME = Servo Lenkung
+PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive nachschub Kontrolle
+REVERSING_CAMERA_GUINAME = Rückfahr Kamera
+SATNAV_GUINAME = GPS Navigation
+SPARE_WHEEL_GUINAME = Reserverad
 SPOILER_GUINAME = Spoiler
-STOP_START_ENGINE_GUINAME = Stop-Start Engine
-SUN_ROOF_GUINAME = Sun Roof
-TIRE_PRESSURE_SENSORS_GUINAME = Tire-pressure sensors
-TOUCHSCREEN_GUINAME = Touchscreen Interface
-TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Traffic-Aware Cruise Control
-VOICE_RECOGNITION_GUINAME = Voice Recognition
-XENON_HEADLIGHTS_GUINAME = Xenon Headlights
+STOP_START_ENGINE_GUINAME = Start-Stop Motor
+SUN_ROOF_GUINAME = Schiebedach
+TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck sensoren
+TOUCHSCREEN_GUINAME = Touchscreen Display
+TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Vollautomatischer Tempomat
+VOICE_RECOGNITION_GUINAME = Sprach erkennung
+XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
 
