--- a/features.ini
+++ b/features.ini
@@ -1,28 +1,28 @@
 [config]
 FEATURE_BASIC_CAR_GUINAME = Einfaches Auto
 FEATURE_BASIC_QA_GUINAME = Qualitäts Kontrolle
-FEATURE_ANTILOCK_BRAKES_GUINAME = Anti Blockier System
-FEATURE_REVERSING_CAMERA_GUINAME = Rückfahr Kamera
+FEATURE_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem
+FEATURE_REVERSING_CAMERA_GUINAME = Rückfahrkamera
 FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
 FEATURE_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
-FEATURE_PASSENGER_AIRBAG_GUINAME = Beifahre Airbag
+FEATURE_PASSENGER_AIRBAG_GUINAME = Beifahrer Airbag
 FEATURE_SPARE_WHEEL_GUINAME = Ersatzrad
-FEATURE_LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurehalte Assistent
+FEATURE_LANE_DEPARTURE_WARNING_SYSTEM_GUINAME = Spurhalteassistent
 FEATURE_POWER_STEERING_GUINAME = Servo Lenkung
-FEATURE_AUTOSTEER_HEADLIGHTS_GUINAME = Bewegliche Frontscheinwerfer
+FEATURE_AUTOSTEER_HEADLIGHTS_GUINAME = Adaptives Kurvenlicht
 FEATURE_CRUISE_CONTROL_GUINAME = Tempomat
 FEATURE_ADAPTIVE_CRUISE_CONTROL_GUINAME = Adapativer Tempomat
 FEATURE_TRAFFIC_AWARE_CRUISE_CONTROL_GUINAME = Voll Automatischer Tempomat
-FEATURE_CENTRAL_LOCKING_GUINAME = Zentralverigelung
+FEATURE_CENTRAL_LOCKING_GUINAME = Zentralveriegelung
 FEATURE_CAR_ALARM_GUINAME = Alarmanlage
 FEATURE_KEYLESS_ENTRY_GUINAME = Schluesselloses Zugangssystem 
-FEATURE_AIRCON_GUINAME = Klima Anlage
-FEATURE_CLIMATE_CONTROL_GUINAME = Klima Kontrole
+FEATURE_AIRCON_GUINAME = Klimaanlage
+FEATURE_CLIMATE_CONTROL_GUINAME = Klima Automatik
 FEATURE_POLLEN_FILTER_GUINAME = Pollen Filter
 FEATURE_HEATER_GUINAME = Heizung
 FEATURE_HEATED_SEATS_GUINAME = Beheitzte Sitze
 FEATURE_LEATHER_INTERIOR_GUINAME = Leder Innenausstattung
-FEATURE_SUN_ROOF_GUINAME = Einfaches Schiebe Dach
+FEATURE_SUN_ROOF_GUINAME = Schiebedach
 FEATURE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach
 FEATURE_ELECTRIC_WINDOWS_GUINAME = Elektronische Fenster
 FEATURE_SATNAV_GUINAME = GPS Navigationssystem
@@ -32,9 +32,9 @@ FEATURE_POWERED_SEATS_GUINAME = Elektrische Sitze
 FEATURE_POWERED_STEER_ADJUSTMENT_GUINAME = Lenkhilfe
 FEATURE_POWERED_TAILGATE_GUINAME = Automatische Heckklappe
 FEATURE_IN_CAR_MUSIC_GUINAME = Boardentertainment
-FEATURE_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Support
+FEATURE_BLUETOOTH_PHONE_SUPPORT_GUINAME = Bluetooth Telefon Unterstuetzung
 FEATURE_VOICE_RECOGNITION_GUINAME = Spracherkennung
-FEATURE_ALUMINIUM_BODY_GUINAME = Aluminium Hülle
+FEATURE_ALUMINIUM_BODY_GUINAME = Aluminium Karosse
 FEATURE_SPOILER_GUINAME = Spoiler
 FEATURE_STOP_START_ENGINE_GUINAME = Start-Stop Automatik
 FEATURE_EMERGENCY_BRAKE_ASSIST_GUINAME = Notfall Bremsassistent
@@ -42,6 +42,6 @@ FEATURE_DIRECTIONAL_HEADLIGHTS_GUINAME = Ausgerichtete Frontscheinwerfer
 FEATURE_XENON_HEADLIGHTS_GUINAME = Xenon Frontscheinwerfer
 FEATURE_LED_HEADLIGHTS_GUINAME = LED Frontscheinwerfer
 FEATURE_ALLOY_WHEELS_GUINAME = Leichtmetall Felgen
-FEATURE_POLISH_GUINAME = Pollierte Lackierung
+FEATURE_POLISH_GUINAME = Polierte Lackierung
 FEATURE_TOUCHSCREEN_GUINAME = Touchscreen Bildschrim
 
