--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -1,25 +1,25 @@
 [config]
 TASK_MAKE_VALVE_GUINAME = Ventil Herstellung
-TASK_FIT_FRONTBUMPER_GUINAME = Vordere Stosstangen Montage
+TASK_FIT_FRONTBUMPER_GUINAME = Vordere Stossstangen Montage
 TASK_MAKE_WINDOWS_GUINAME = Fenster Herstellung
 TASK_MAKE_WHEELS_GUINAME = Felgen Herstellung
-TASK_FIT_REARARCH_GUINAME = Hinterer Kotflügel Montage
+TASK_FIT_REARARCH_GUINAME = Hinterer Kotfluegel Montage
 TASK_MAKE_TIRES_GUINAME = Reifen Herstellung
 TASK_FIT_REARBUMPER_GUINAME = Hintere Stossstangen Montage
-TASK_MAKE_DOORPANELS_GUINAME = Herstellung Von Tür Verkleidung
+TASK_MAKE_DOORPANELS_GUINAME = Herstellung Von Tuer Verkleidung
 TASK_MAKE_BRAKES_GUINAME = Bremsen Herstellung
 TASK_MAKE_STEERINGWHEELS_GUINAME = Lenkrad Herstellung
 TASK_MAKE_STARTERMOTOR_GUINAME = Motorsteuerung Herstellung
 TASK_MAKE_SPOILER_GUINAME = Spoiler Herstellung
-TASK_MAKE_BOOT_GUINAME = Kofferaum Herstellung
+TASK_MAKE_BOOT_GUINAME = Heckklappen Herstellung
 TASK_MAKE_BONNET_GUINAME = Motorhauben Herstellung
 TASK_MAKE_ROLLCAGE_GUINAME = Karosserie Herstellung 
 TASK_MAKE_ENGINE_BLOCK_GUINAME = Motorblock Herstellung
 TASK_MAKE_ENGINE_ASSEMBLY_GUINAME = Finale Motor Montage
 TASK_MAKE_DRIVE_SHAFT_GUINAME = Antribswelle Herstellung
-TASK_FIT_FRONTARCH_GUINAME = Voderer Kotflügel Montage
-TASK_FIT_BOOT_GUINAME = Kofferaum Montage
-TASK_FIT_STEERING_COLUMN_GUINAME = Lenksauelen Montage
+TASK_FIT_FRONTARCH_GUINAME = Voderer Kotfluegel Montage
+TASK_FIT_BOOT_GUINAME = Heckklappen Montage
+TASK_FIT_STEERING_COLUMN_GUINAME = Lenksaeulen Montage
 TASK_FIT_STEERING_WHEEL_GUINAME = Lenkrad Montage
 TASK_FIT_TIRES_GUINAME = Reifen Montage
 TASK_FIT_WHEELS_GUINAME = Felgen Montage
@@ -30,39 +30,39 @@ TASK_MAKE_EXHAUST_GUINAME = Auspuff Herstellung
 TASK_MAKE_FUELTANKS_GUINAME = Benzintank Herstellung
 TASK_MAKE_HORNS_GUINAME = Hupen Herstellung
 TASK_MAKE_LIGHTS_GUINAME = Scheinwerfer herstellung
-TASK_MAKE_AIRCON_GUINAME = Druckluft Hupen Herstellung
+TASK_MAKE_AIRCON_GUINAME = Klimaanlagen Herstellung
 TASK_MAKE_PANORAMIC_SUNROOF_GUINAME = Panorama Schiebedach Herstellung
 TASK_MAKE_POWERTRAIN_GUINAME = Antrieb Herstellung
-TASK_MAKE_RADIATOR_GUINAME = Kühler Herstellung
+TASK_MAKE_RADIATOR_GUINAME = Kuehler Herstellung
 TASK_MAKE_ROOF_GUINAME = Dach Herstellung
 TASK_MAKE_SEATS_GUINAME = Sitz Herstellung
 TASK_MAKE_WINDSCREEN_GUINAME = Frontscheiben Herstellung
-TASK_FIT_ARCHES_GUINAME = Finale Kotflügel Montage
+TASK_FIT_ARCHES_GUINAME = Kotfluegel Montage
 TASK_FIT_BONNET_GUINAME = Motorhauben Montage
 TASK_FIT_BOTTOMTRIM_GUINAME = Zierleisten Montage
 TASK_FIT_BRAKES_GUINAME = Bremsen Montage
-TASK_FIT_BUMPERS_GUINAME = Stosstangen Montage
-TASK_FIT_DOOR_PANELS_GUINAME = Montage der Tuerverkleidung
+TASK_FIT_BUMPERS_GUINAME = Stossstangen Montage
+TASK_FIT_DOOR_PANELS_GUINAME = Tuerverkleidung Montage
 TASK_FIT_DRIVE_SHAFT_GUINAME = Antriebswellen Montage 
 TASK_FIT_FRONTVENT_GUINAME = Ventilations Montage
 TASK_FIT_FRONT_AXLE_GUINAME = Vorderachsen Montage
 TASK_FIT_REAR_AXLE_GUINAME = Hinterachsen Montage
-TASK_FIT_ROLLCAGE_GUINAME = Überollkaefig Montage
-TASK_MAKE_SUNROOF_GUINAME = Schiebedach Herstekllung
-TASK__FINISH_GUINAME = Finale Untergrund Lackierung
+TASK_FIT_ROLLCAGE_GUINAME = Ueberollkaefig Montage
+TASK_MAKE_SUNROOF_GUINAME = Schiebedach Herstellung
+TASK_DRY FINISH_FINISH_GUINAME = Lack Trocknung
 TASK_FIT_STEERING_ASSEMBLY_GUINAME = Lenkstangen Montage
 TASK_FIT_BODYFRAME_GUINAME = Karosserie Montage
 TASK_STEEL_SHEETS_GUINAME = Stahlblech Herstellung
 TASK_FIT_DASHBOARD_GUINAME = Amaturenbrett Montage
 TASK_FIT_DOORS_GUINAME = Tuer Montage
 TASK_FIT_ROOF_GUINAME = Dach Montage
-TASK_MAKE_SERVOS_GUINAME = Servos Herstellung
+TASK_MAKE_SERVOS_GUINAME = Servo Herstellung
 TASK_MAKE_SENSORS_GUINAME = Sensor Herstellung
 TASK_FIT_HORN_GUINAME = Hupen Montage
 TASK_FIT_LIGHTS_GUINAME = Scheinwerfer Montage
-TASK_FIT_RADIATOR_GUINAME = Kühler Montage
-TASK_FIT_WHEELASSEMBLY_GUINAME = Felgen 
-TASK_DRY_UNDERCOAT_GUINAME = Grundierung
+TASK_FIT_RADIATOR_GUINAME = Kuehler Montage
+TASK_FIT_WHEELASSEMBLY_GUINAME = Reifen Montage
+TASK_DRY_UNDERCOAT_GUINAME = Grundierungs Trocknung
 TASK_FIT_SEATS_GUINAME = Sitz Montage
 TASK_FIT_WINDSCREEN_GUINAME = Frontscheiben Montage
 TASK_FIT_AIRCON_GUINAME = Klimaanlagen Montage
@@ -73,29 +73,29 @@ TASK_FIT_AXLES_GUINAME = Achsen Montage
 TASK_FUEL_TANK_GUINAME = Benzintank Montage
 TASK_PAINT_FINISH_GUINAME = Finale Lackierung
 TASK_PAINT_UNDERCOAT_GUINAME = Farb Grundierung
-TASK_POLISH_PAINTWORK_GUINAME = Polierte lackierung
-TASK_FIT_ELECTRONICS_GUINAME = Montage Der Elektronik
+TASK_POLISH_PAINTWORK_GUINAME = Polierung
+TASK_FIT_ELECTRONICS_GUINAME = Elektronik Montage
 TASK_FIT_CHASSIS_GUINAME = Fahrgestell Montage 
 CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Fortgeschrittene Montage
 TASK_FIT_BODY_GUINAME = Karosserie Montage
-TASK_CONVEYOR_GUINAME = Förderband
+TASK_CONVEYOR_GUINAME = Foerderband
 TASK_EXPORT_GUINAME = Export
 TASK_PAINT_GUINAME = Farbe
 TASK_FIT_ACCESSORIES_GUINAME = Zubehoer Montage
 TASK_FIT_ENGINE_GUINAME = Motor Montage
-CATEGORY_FACILITIES_GUINAME = Anllagen
+CATEGORY_FACILITIES_GUINAME = Anlagen
 TASK_QA_GUINAME = Qualitaetssicherung
 TASK_RESOURCE_CONVEYOR_GUINAME = Produktionsmittel Foerderband
 TASK_RESOURCE_IMPORTER_GUINAME = Produktionsmittel Importierer
-TASK_CONVEYOR_CONVERGE3_GUINAME = Forderband Sammelpunkt 3
-TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Forderband T-stueck Rechts
-TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Forderband T-stueck Links
-TASK_CONVEYOR_T_JOIN_GUINAME = Forderband T-stueck
-TASK_CONVEYOR_T_GUINAME = Forderband Kreuzung
-TASK_CONVEYOR_RIGHT_GUINAME = Forderband Rechts
-TASK_CONVEYOR_LEFT_GUINAME = Forderband T-stueck Links
-TASK_CONVEYOR_CROSSOVER_GUINAME = Forderband Uebergang
+TASK_CONVEYOR_CONVERGE3_GUINAME = Foerderband Sammelpunkt 3
+TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Foerderband T-stueck Rechts
+TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Foerderband T-stueck Links
+TASK_CONVEYOR_T_JOIN_GUINAME = Foerderband T-stueck
+TASK_CONVEYOR_T_GUINAME = Foerderband Kreuzung
+TASK_CONVEYOR_RIGHT_GUINAME = Foerderband Rechts
+TASK_CONVEYOR_LEFT_GUINAME = Foerderband Links
+TASK_CONVEYOR_CROSSOVER_GUINAME = Foerderband Uebergang
 TASK_CONVEYOR_T_RIGHT_GUINAME = Forderband Kreutzung Rechts
-TASK_CONVEYOR_SPLIT3_GUINAME = Forderband Teilung 3
-TASK_CONVEYOR_T_LEFT_GUINAME = Forderband Kreutzung Links
+TASK_CONVEYOR_SPLIT3_GUINAME = Foerderband Teilung 3
+TASK_CONVEYOR_T_LEFT_GUINAME = Foerderband Kreuzung Links
 
